# binwords

./: .gitignore  .gitignore.swp  CMakeLists.txt  README.md
include/: wordsBuffer.h
src/: CMakeLists.txt  wordsBuffer.c
